:rocket: deploy config

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-aiohttp==3.7.4.post0
-pyTelegramBotAPI==4.5.1
-shazamio==0.1.1.0
-python-decouple==3.6
+asyncio
+aiohttp
+pyTelegramBotAPI
+shazamio
+python-decouple
 youtube-dl==2021.6.6
 youtube-search-python==1.6.5
